fixed error of login state not showing on home - added logout

--- a/styles/style.css
+++ b/styles/style.css
@@ -102,6 +102,12 @@ body {
   text-decoration: underline;
 }
 
+.welcome-user {
+  color: #e9e9e9;
+  font-family: "Special Elite", monospace;
+
+}
+
 footer {
   margin-top: 2rem;
   padding: 1rem;
